Edited readme file, fix the event command, added some annotations